--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node": "14.x"
   },
   "scripts": {
-    "start": "babel-node src/index.js",
+    "start": "node src/index.js",
     "dev": "nodemon src/index.js --exec babel-node"
   },
   "author": "Frave Developer",
