--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "node": "14.x"
   },
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js --exec babel-node"
+    "start": "node index.js",
+    "dev": "nodemon index.js --exec babel-node"
   },
   "author": "Frave Developer",
   "license": "ISC",
