--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.3",
     "mysql": "^2.18.1",
+    "mysql2-promise": "^0.1.4",
     "socket.io": "^4.5.4"
   },
   "devDependencies": {
