vercel_json_changed

--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,8 @@
       "src": "/(.*)",
       "dest": "/"
     }
-  ]
+  ],
+  "env": {
+    "CORS_ORIGIN": "https://justdun-backend.vercel.app"
+  }
 }
